--- a/src/unassigned-cases/containers/unassigned-cases/unassigned-cases.component.html
+++ b/src/unassigned-cases/containers/unassigned-cases/unassigned-cases.component.html
@@ -17,16 +17,13 @@
         <mat-tab-group animationDuration="0ms" (selectedTabChange)="tabChanged($event)" *ngIf="navItems && navItems.length > 0">
           <mat-tab *ngFor="let navItem of navItems; let last = last;" [label]="navItem.text">
             <ccd-case-list
-            *ngIf="(cases$ | async)?.length > 0 else noData"
+            *ngIf="(cases$ | async)?.length > 0"
             [cases]="cases$ | async"
             [selectedCases]="selectedCases"
             [tableConfig]="tableConfig"
             [selectionEnabled]="true"
             (selection)="onCaseSelection($event)">
             </ccd-case-list>
-            <ng-template #noData>
-              <div>{{navItem.text}} doesn't support shared case type.</div>
-            </ng-template>
           </mat-tab>
         </mat-tab-group>
     </div>
