Integrated CCD pagination component

--- a/src/users/containers/users/users.component.html
+++ b/src/users/containers/users/users.component.html
@@ -16,7 +16,7 @@
      <ng-template #isLoading>
         <div>Loading...</div>
      </ng-template>
-     <ccd-pagination (pageChange)="paginationEvent.emit($event)"></ccd-pagination>
+     <ccd-pagination (pageChange)="pageNext($event)"></ccd-pagination>
   </main>
 </div>
 
