--- a/src/unassigned-cases/containers/unassigned-cases/unassigned-cases.component.html
+++ b/src/unassigned-cases/containers/unassigned-cases/unassigned-cases.component.html
@@ -22,7 +22,11 @@
             [selectedCases]="selectedCases"
             [tableConfig]="tableConfig"
             [selectionEnabled]="true"
-            (selection)="onCaseSelection($event)">
+            (selection)="onCaseSelection($event)"
+            (pageChange)="onPaginationHandler($event)"
+            [currentPageNo]="currentPageNo"
+            [totalResultsCount]="totalCases"
+            [pageSize]="paginationPageSize">
             </ccd-case-list>
             <ng-template #noData>
               <div>{{navItem.text}} doesn't support shared case type.</div>
@@ -39,6 +43,4 @@
     <div *ngIf="navItems && navItems.length === 0">
       <p>There are no unassigned cases available to be shared.</p>
     </div>
-    <!-- <xuilib-hmcts-pagination *ngIf="unassignedCasesLoaded && (cases$ | async)?.length >= pagination.page_size"
-      (pageChange)="onPaginationHandler($event)" [pageSize]="pagination.page_size"></xuilib-hmcts-pagination> -->
 </main>
