Feature/e UI 5785 performance user list fix (#843)
* EUI-5785: Added initial commit

* wip

* skipLibCheck to true

* avoiding roles returned due to performance issue

* Integrated CCD pagination component

* wip

* added yarn files

* downgraded ccd and ccpay versions

* endpoint updated for test

* Fixed the invite user error issue - it works now

* same with suspend User

* Fixed edit permission issue

* pa11y update, added options to browser to fix page crash issue and imreased timeout limit to accomadate retries

Co-authored-by: Uday Denduluri <uday.denduluri@gmail.com>
Co-authored-by: RiteshHMCTS <ritesh.dsouza@HMCTS.net>
Co-authored-by: RiteshHMCTS <74713687+RiteshHMCTS@users.noreply.github.com>
Co-authored-by: VAMSHI MUNIGANTI <vamshi.muniganti@gmail.com>
Co-authored-by: sreekanthpuligadda <sreekanth.puligadda@hmcts.net>

--- a/src/users/containers/users/users.component.html
+++ b/src/users/containers/users/users.component.html
@@ -11,11 +11,13 @@
         </div>
      </div>
      <div class="table-right_margin">
-      <xuilib-user-list *ngIf="!(isLoading$ | async) else isLoading" [users]="tableUsersData$ | async"></xuilib-user-list>
+      <xuilib-user-list *ngIf="(!(isLoading$ | async) && pageTotalSize) else isLoading" [users]="tableUsersData$ | async"
+      (pageChange)="pageChange($event)" [currentPageNumber]="currentPageNumber" [pageTotalSize]="pageTotalSize">
+      </xuilib-user-list>
      </div>
      <ng-template #isLoading>
-      <div>Loading...</div>
-    </ng-template>
+        <div>Loading...</div>
+     </ng-template>
   </main>
 </div>
 
