EUI-3965 CAA display assigned cases filter section

--- a/src/caa-cases/components/caa-filter/caa-filter.component.html
+++ b/src/caa-cases/components/caa-filter/caa-filter.component.html
@@ -1,72 +1,64 @@
-<!-- <xuilib-generic-filter [config]="fieldsConfig" [settings]="fieldsSettings"></xuilib-generic-filter> -->
-<div class="govuk-grid-row">
+<div class="govuk-grid-row" *ngIf="assignedCasesFilterButtonText === caaShowHideFilterButtonText.show">
   <div class="govuk-grid-column-full">
-    <button type="submit" class="govuk-button govuk-button--secondary">
-      Hide assigned cases filter
-    </button>
     <div id="filterContainer">
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-one-half">
           <h2 class="govuk-heading-m">Filter assigned cases</h2>
           <p class="govuk-body">Filter your organisation's assigned cases by either;</p>
-          <div class="govuk-form-group govuk-!-margin-bottom-0">
-            <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
+          <div class="govuk-form-group">
+            <fieldset class="govuk-fieldset" aria-describedby="filter-assigned-cases">
               <div class="govuk-radios" data-module="govuk-radios">
                 <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="search-all" name="search" type="radio" value="all" data-aria-controls="conditional-search-all" checked="checked">
-                  <label class="govuk-label govuk-radios__label" for="search-all">
+                  <input class="govuk-radios__input" id="caa-filter-all-assignees" name="caa-filter" type="radio" checked="checked"
+                    value="{{caaCasesFilterType.allAssignees}}"
+                    data-aria-controls="caa-filter-all-assignees"
+                    (click)="selectFilterOption($event)">
+                  <label class="govuk-label govuk-radios__label" for="caa-filter-all-assignees">
                     All assignees
                   </label>
                 </div>
                 <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="search-sol" name="search" type="radio" value="Solicitor name" data-aria-controls="conditional-search-sol">
-                  <label class="govuk-label govuk-radios__label" for="search-sol">
+                  <input class="govuk-radios__input" id="caa-filter-assignee-name" name="caa-filter" type="radio"
+                    value="{{caaCasesFilterType.assigneeName}}"
+                    data-aria-controls="caa-filter-assignee-name"
+                    (click)="selectFilterOption($event)">
+                  <label class="govuk-label govuk-radios__label" for="caa-filter-assignee-name">
                     Assignee name
                   </label>
                 </div>
-                <div class="govuk-radios__conditional" id="conditional-search-sol">
+                <div class="govuk-radios__conditional" [ngClass]="{'govuk-radios__conditional--hidden': selectedFilterType !== caaCasesFilterType.assigneeName}">
                   <div class="govuk-form-group">
-                    <label class="govuk-label" for="showSols">
+                    <label class="govuk-label" for="assignee-person">
                       Type the name and select an available match option
                     </label>
-                    <div id="solicitorNamesAutocomplete">
-                      <div class="autocomplete__wrapper" role="combobox" aria-expanded="false">
-                        <div aria-atomic="true" aria-live="polite" role="status">
-                          No search results.
-                          <span>,,</span>
-                        </div>
-                        <input aria-owns="sol-autocomplete__listbox" autocomplete="off" class="autocomplete__input autocomplete__input--default" id="sol-autocomplete" name="name-of-solicitor" placeholder="e.g. John Smith" type="text" role="textbox">
-                        <ul class="autocomplete__menu autocomplete__menu--inline autocomplete__menu--hidden" id="sol-autocomplete__listbox" role="listbox">
-                        </ul>
-                      </div>
-                    </div>
+                    <input class="govuk-input" id="assignee-person" name="assignee-person" type="text">
                   </div>
                 </div>
-              </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="search-ccd" name="search" type="radio" value="CCD reference" data-aria-controls="conditional-search-ccd">
-                <label class="govuk-label govuk-radios__label" for="search-ccd">
-                  Case reference number
-                </label>
-              </div>
-              <div class="govuk-radios__conditional" id="conditional-search-ccd">
-                <div class="govuk-form-group">
-                  <label class="govuk-label" for="searchRef">
-                    Enter the 16 digit case reference number
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" id="caa-filter-case-reference-number" name="caa-filter" type="radio"
+                    value="{{caaCasesFilterType.caseReferenceNumber}}"
+                    data-aria-controls="caa-filter-case-reference-number"
+                    (click)="selectFilterOption($event)">
+                  <label class="govuk-label govuk-radios__label" for="caa-filter-case-reference-number">
+                    Case reference number
                   </label>
-                  <input class="govuk-input govuk-!-width-two-thirds" id="searchRef" name="search-ref" type="search" spellcheck="false">
+                </div>
+                <div class="govuk-radios__conditional" [ngClass]="{'govuk-radios__conditional--hidden': selectedFilterType !== caaCasesFilterType.caseReferenceNumber}">
+                  <div class="govuk-form-group">
+                    <label class="govuk-label" for="case-reference-number">
+                      Enter the 16 digit case reference number
+                    </label>
+                    <input class="govuk-input" id="case-reference-number" name="case-reference-number" type="text">
+                  </div>
                 </div>
               </div>
             </fieldset>
           </div>
+          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+          <button type="submit" class="govuk-button govuk-!-margin-right-3">
+            Apply filter
+          </button>
         </div>
-      </div>
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-one-half  govuk-body govuk-!-margin-bottom-6">
-        <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-        <button type="submit" class="govuk-button govuk-!-margin-right-3">
-          Apply filter
-        </button>
       </div>
     </div>
   </div>
