--- a/src/caa-cases/components/caa-filter/caa-filter.component.scss
+++ b/src/caa-cases/components/caa-filter/caa-filter.component.scss
@@ -4,4 +4,12 @@
     padding-top: 20px;
     margin-left: 15px;
   }
+
+  #assignee-person {
+    width: 500px;
+  }
+
+  #case-reference-number {
+    width: 356px;
+  }
 }
