--- a/src/caa-cases/containers/caa-cases/caa-cases.component.html
+++ b/src/caa-cases/containers/caa-cases/caa-cases.component.html
@@ -2,22 +2,26 @@
     <h1 class="govuk-heading-xl">Unassigned cases</h1>
     <div>
       <details _ngcontent-dti-c13 class="govuk-details" data-module="govuk-details" id="add-user-help" close>
-            <summary _ngcontent-wbr-c13 class="govuk-details__summary">
-              <span _ngcontent-wbr-c13 class="govuk-details__summary-text" id="content-why-can-not-find-case"> Can't find a case?
-              </span>
-            </summary>
-            <div _ngcontent-kpx-c13 class="govuk-details__text" id="content-reason-can-not-find-case">
-               You might not see any cases listed if either of the following apply:
-                <ul>
-                  <li>your service currently doesn’t allow you to search for and select a respondent solicitor</li>
-                  <li>your firm isn't named as a respondent on any new digital cases</li>
-                </ul>
-            </div>
+        <summary _ngcontent-wbr-c13 class="govuk-details__summary">
+          <span _ngcontent-wbr-c13 class="govuk-details__summary-text" id="content-why-can-not-find-case"> Can't find a case?
+          </span>
+        </summary>
+        <div _ngcontent-kpx-c13 class="govuk-details__text" id="content-reason-can-not-find-case">
+            You might not see any cases listed if either of the following apply:
+            <ul>
+              <li>your service currently doesn't allow you to search for and select a respondent solicitor</li>
+              <li>your firm isn't named as a respondent on any new digital cases</li>
+            </ul>
+        </div>
       </details>
-			<button type="submit" class="govuk-button govuk-button--secondary" (click)="toggleFilterSection()">
-				{{assignedCasesFilterButtonText}}
-			</button>
-      <app-caa-filter-component [assignedCasesFilterButtonText]="assignedCasesFilterButtonText"></app-caa-filter-component>
+      <button type="submit" class="govuk-button govuk-button--secondary" (click)="toggleFilterSection()">
+        {{assignedCasesFilterButtonText}}
+      </button>
+      <app-caa-filter-component *ngIf="assignedCasesFilterButtonText === caaShowHideFilterButtonText.hide"
+        [caaFormGroup]="caaFormGroup"
+        [selectedFilterType]="selectedFilterType"
+        (emitSelectedFilterType)="onSelectedFilterTypeChanged($event)"
+      ></app-caa-filter-component>
       <div *ngIf="hasResults()" class="pagination-top"
         attr.aria-label="{{ getTotalResults() }} results have been found" role="status">
         <span class="text-16" id="summary__text">Showing 
