EUI-6345 CAA unassigned cases filter

--- a/src/caa-cases/components/caa-filter-assigned/caa-filter-assigned.component.html
+++ b/src/caa-cases/components/caa-filter-assigned/caa-filter-assigned.component.html
@@ -62,8 +62,8 @@
               </fieldset>
             </div>
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-            <button type="submit" class="govuk-button govuk-!-margin-right-3">
-              Apply filter
+            <button type="submit" class="govuk-button govuk-button--secondary govuk-!-margin-right-3">
+              Search
             </button>
           </form>
         </div>
