EUI-6345 CAA unassigned cases filter

--- a/src/caa-cases/components/caa-filter-unassigned/caa-filter-unassigned.component.html
+++ b/src/caa-cases/components/caa-filter-unassigned/caa-filter-unassigned.component.html
@@ -3,7 +3,7 @@
     <div id="filterContainer">
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-one-half">
-          <h2 class="govuk-heading-m">Filter unassigned cases</h2>
+          <h2 class="govuk-heading-m">Search for an unassigned case</h2>
           <form class="form" [formGroup]="caaFormGroup">
             <div class="govuk-form-group">
               <fieldset class="govuk-fieldset" aria-describedby="filter-unassigned-cases">
